--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,4 +1,4 @@
-<div class=" px-5 py-2 bg-amber-100 flex justify-between">
+<!-- <div class=" px-5 py-2 bg-amber-100 flex justify-between">
   <img [routerLink]="['/']" src="mw-logo.png" alt="Logo" class="h-[50px] rounded-md cursor-pointer" />
   <div class="flex gap-x-5 items-center">
     <p [routerLink]="['/']" class="cursor-pointer font-medium">Home</p>
@@ -25,5 +25,59 @@
     </div>
     <button (click)="isLoggedIn?logout():login()"
       class="bg-black px-3 py-2 rounded-md text-white cursor-pointer">{{isLoggedIn?'Logout':'Login'}}</button>
+  </div>
+</div> -->
+
+<div class=" text-white text-center bg-black flex items-center justify-center menubar sticky top-0">
+  <div>
+    <div class="text-4xl w-full">
+      <p class="menu-active py-2" style="font-family:quantify !important">Motowagon</p>
+    </div>
+   <div class="flex items-center justify-center gap-x-5 md:gap-x-10 w-full pb-3">
+  <a 
+    [routerLink]="['/']"
+    routerLinkActive="menu-active" 
+    [routerLinkActiveOptions]="{ exact: true }" 
+    class="menu-inactive">
+    <svg xmlns="http://www.w3.org/2000/svg" fill="none"
+      viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+      class="size-6 transition-colors duration-200">
+      <path stroke-linecap="round" stroke-linejoin="round"
+        d="m2.25 12 8.954-8.955c.44-.439 1.152-.439 1.591 0L21.75 12M4.5 9.75v10.125c0 
+        .621.504 1.125 1.125 1.125H9.75v-4.875c0-.621.504-1.125 1.125-1.125h2.25c.621 
+        0 1.125.504 1.125 1.125V21h4.125c.621 0 1.125-.504 
+        1.125-1.125V9.75M8.25 21h8.25" />
+    </svg>
+  </a>
+
+  <a 
+    [routerLink]="['/dashboard/profile']"
+    routerLinkActive="menu-active" 
+    class="menu-inactive">
+    <svg xmlns="http://www.w3.org/2000/svg" fill="none"
+      viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+      class="size-6 transition-colors duration-200">
+      <path stroke-linecap="round" stroke-linejoin="round"
+        d="M15.75 10.5V6a3.75 3.75 0 1 0-7.5 
+        0v4.5m11.356-1.993 1.263 12c.07.665-.45 1.243-1.119 
+        1.243H4.25a1.125 1.125 0 0 1-1.12-1.243l1.264-12A1.125 
+        1.125 0 0 1 5.513 7.5h12.974c.576 0 1.059.435 1.119 
+        1.007ZM8.625 10.5a.375.375 0 1 1-.75 0 
+        .375.375 0 0 1 .75 0Zm7.5 0a.375.375 0 1 1-.75 
+        0 .375.375 0 0 1 .75 0Z" />
+    </svg>
+  </a>
+
+  <a 
+    [routerLink]="['/cart']"
+    routerLinkActive="menu-active" 
+    class="menu-inactive">
+    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+  <path stroke-linecap="round" stroke-linejoin="round" d="M17.982 18.725A7.488 7.488 0 0 0 12 15.75a7.488 7.488 0 0 0-5.982 2.975m11.963 0a9 9 0 1 0-11.963 0m11.963 0A8.966 8.966 0 0 1 12 21a8.966 8.966 0 0 1-5.982-2.275M15 9.75a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
+</svg>
+
+  </a>
+</div>
+
   </div>
 </div>
