--- a/src/app/web-layout/home/home.component.html
+++ b/src/app/web-layout/home/home.component.html
@@ -1,5 +1,6 @@
-<div *ngIf="groupedProducts.length>0" class="flex flex-wrap gap-6 p-10 bg-gray-50">
-  <div *ngFor="let item of groupedProducts"
+<div *ngIf="groupedProducts.length>0" class="  min-h-screen">
+  <div class="flex flex-wrap gap-6 p-10 ">
+    <div *ngFor="let item of groupedProducts"
     class="w-full sm:w-5/12 md:w-1/3 lg:w-1/4 bg-white rounded-2xl shadow-md overflow-hidden flex flex-col justify-between transition-transform hover:scale-[1.02]">
     <!-- Images Carousel -->
     <div class="pb-6">
@@ -43,6 +44,9 @@
             {{ size.label.toUpperCase() }}
           </p>
         </div>
+        <p class="font-bold text-xl mt-4">
+          {{ item.colors[item.selectedColorIndex]?.sizes[item.selectedSizeIndex]?.sp | currency:'INR':'symbol':'1.2-2' }}
+        </p>
       </div>
     </div>
 
@@ -61,6 +65,7 @@
       class="w-full bg-gray-300 text-gray-600 py-3 font-semibold cursor-not-allowed">
       Out of Stock
     </button>
+  </div>
   </div>
 </div>
   <div *ngIf="groupedProducts.length===0" class="font-bold text-4xl text-gray-500 p-10">Nothing in shop at the moment...</div>
