--- a/src/app/web-layout/dashboard-layout/profile/profile.component.html
+++ b/src/app/web-layout/dashboard-layout/profile/profile.component.html
@@ -10,7 +10,7 @@
       <h2 class="text-2xl font-semibold text-gray-800">{{ profile.fullName }}</h2>
       <p class="text-gray-600">{{ profile.emailId }}</p>
       <p class="text-gray-600">{{ profile.phoneNumber }}</p>
-      <p class="text-sm text-purple-700 font-medium mt-1">{{ profile.role }}</p>
+      <p class="text-sm primary-green font-medium mt-1">{{ profile.role }}</p>
     </div>
   </div>
 
