--- a/src/app/web-layout/buy/buy.component.html
+++ b/src/app/web-layout/buy/buy.component.html
@@ -84,7 +84,7 @@
   </div>
   <div class="w-full lg:w-7/12 p-4 md:border-l ps-10 border-gray-300">
 
-    <div *ngIf="formItems.length>0 && orderForm.get('shippingAddressId')?.valid; else noItems">
+    <div *ngIf="formItems.length>0 && orderForm.get('shippingAddressId')?.valid && calculatedResults && myProfile.wallet; else noItems">
       <div class="w-full space-y-4">
         <div class="flex items-center gap-4 border-b border-gray-200 pb-4">
           <h3 class="text-lg font-semibold w-5/12">Product</h3>
@@ -189,9 +189,9 @@
       </div>
 
       <div class="flex flex-col sm:flex-row gap-4 mt-6 max-w-lg w-full">
-        <button type="submit" [disabled]="orderForm.invalid" [ngClass]="orderForm.valid ? 'bg-blue-600' : 'bg-blue-300'"         (click)="setPaymentSource('razorpay')"
+        <button type="submit" [disabled]="orderForm.invalid" [ngClass]="orderForm.valid ? 'bg-blue-600 hover:bg-blue-700' : 'bg-blue-300'"         (click)="setPaymentSource('razorpay')"
 
-          class="flex-1 text-white font-semibold py-3 rounded-lg hover:bg-blue-700 transition">
+          class="flex-1 text-white font-semibold py-3 rounded-lg  transition">
           Pay Full via Razorpay ₹{{this.calculatedResults.totalAmount}}
         </button>
 
@@ -206,6 +206,10 @@
   <div class="w-full lg:w-7/12 p-4  ps-10 border-gray-300">
     <ng-container *ngIf="formItems.length === 0">
       <p>Your cart is empty.</p>
+    </ng-container>
+    
+    <ng-container *ngIf="formItems.length > 0 && !myProfile.shippingAddress">
+      <p>Please add a shipping address to proceed.</p>
     </ng-container>
 
     <ng-container *ngIf="formItems.length > 0 && myProfile.shippingAddress">
