--- a/src/app/web-layout/dashboard-layout/dashboard-layout.component.html
+++ b/src/app/web-layout/dashboard-layout/dashboard-layout.component.html
@@ -14,7 +14,7 @@
         {{ item.label }}
       </a>
     </li>
-    <li class="p-3 px-7 cursor-pointer flex items-center gap-2 hover:bg-black hover:text-white">
+    <li (click)="loginService.logout()" class="p-3 px-7 cursor-pointer flex items-center gap-2 hover:bg-black hover:text-white">
       <a class="flex items-center gap-2 w-full h-full">
        Logout
       </a>
