--- a/src/app/web-layout/dashboard-layout/orders/orders.component.html
+++ b/src/app/web-layout/dashboard-layout/orders/orders.component.html
@@ -1,8 +1,8 @@
-<div *ngIf="myOrders.length === 0" class="text-gray-500">
+<div *ngIf="!myOrders.length" class="text-gray-500">
     You have no orders yet.
 </div>
 <!-- Order List View -->
-<div *ngIf="!showDetails" class="p-6">
+<div *ngIf="!showDetails && myOrders.length" class="p-6">
     <h2 class="text-2xl font-bold text-gray-800 mb-4">My Orders</h2>
 
     <div class="overflow-auto">
@@ -97,7 +97,7 @@
 
 <div *ngIf="returnItems">
     <button class="mb-4 px-4 py-2 text-sm bg-gray-100 hover:bg-gray-200 rounded" (click)="returnItems=null">
-        ← Back to Order Details
+        ← Back to Orders
     </button>
     <h4 class="text-lg font-semibold mb-4">ORDER DETAILS</h4>
 
@@ -139,5 +139,14 @@
             </div>
         </div>
     </div>
-    <button (click)="createRetrunRequest()" class="block bg-black text-white py-1 px-2 font-medium rounded-sm mt-5 ms-auto" (click)="openReturnRequest()">Create Request</button>
+            <p class="pt-5 font-medium">Upload Images</p>
+     <div class="flex pt-5">
+
+                      <ng-container *ngIf="returnImages.length> 0;">
+                        <img *ngFor="let im of returnImages" class="w-[50px] rounded-md me-2" [src]="im" />
+                      </ng-container>
+                      <app-image-upload
+                        (imageCroppedFile)="handleImageUpload($event)"></app-image-upload>
+                    </div>
+    <button (click)="createReturnRequest()" class="block bg-black text-white py-1 px-2 font-medium rounded-sm mt-5 ms-auto" >Create Request</button>
 </div>
