--- a/src/app/web-layout/home/home.component.html
+++ b/src/app/web-layout/home/home.component.html
@@ -1,30 +1,27 @@
 <div *ngIf="groupedProducts.length>0" class="  min-h-screen">
-  <div class="flex flex-wrap gap-6 p-10 ">
+  <div class="flex flex-wrap gap-6 p-10 max-w-[1600px] mx-auto">
     <div *ngFor="let item of groupedProducts"
-    class="w-full sm:w-5/12 md:w-1/3 lg:w-1/4 bg-white rounded-2xl shadow-md overflow-hidden flex flex-col justify-between transition-transform hover:scale-[1.02]">
-    <!-- Images Carousel -->
-    <div class="pb-6">
-      <div class="w-full flex gap-2 overflow-x-auto pb-2">
+    class="w-full sm:w-5/12 md:w-1/3 lg:w-1/4 bg-gray-200 rounded-2xl p-3 shadow-md overflow-hidden flex flex-col justify-between transition-transform hover:scale-[1.02]">
+    <div class="bg-white h-full rounded-xl overflow-hidden">
+            <div class="w-full flex gap-2 overflow-x-auto pb-2">
         <div class="min-w-full h-[300px] overflow-hidden flex items-center justify-center rounded-lg bg-gray-100"
           *ngFor="let image of item.colors[item.selectedColorIndex]?.sizes[item.selectedSizeIndex]?.images">
-          <img [src]="image.imageUrl" class="max-h-full max-w-full object-contain rounded-md" />
+          <img [src]="image.imageUrl" class="max-h-full max-w-full object-cover rounded-md rounded-b" />
         </div>
       </div>
+    <div class="pb-6 bg-white">
 
-      <!-- Product Title & Description -->
-      <div class="mt-3 px-4">
-        <h2 class="text-lg font-semibold text-gray-800 truncate">
+      <div class="mt-3 px-4 flex justify-between items-center">
+        <div>
+          <h2 class="text-xl font-semibold text-gray-800 truncate">
           {{ item.product.name }}
         </h2>
-        <p class="text-sm text-gray-500 line-clamp-2">
-          {{ item.product.description }}
+                <p class="font-medium text-md">
+          {{ item.colors[item.selectedColorIndex]?.sizes[item.selectedSizeIndex]?.sp | currency:'INR':'symbol':'1.2-2' }}
         </p>
-      </div>
+        </div>
 
-      <!-- Colors & Sizes -->
-      <div class="flex flex-col items-start px-4 mt-4">
-        <div *ngIf="item.product.has_colors" class="flex gap-2 items-center mb-3">
-          <span class="text-xs text-gray-500">Colors:</span>
+               <div *ngIf="item.product.has_colors" class="flex gap-2 items-center">
           <div (click)="item.selectedColorIndex = colorIndex;item.selectedSizeIndex=0"
             *ngFor="let color of item.colors; let colorIndex = index" class="p-0.5 rounded-full bg-white ring-offset-1 {{checkColorOutofStock(color)?'opacity-50':''}}"
             [ngStyle]="colorIndex === item.selectedColorIndex ? { boxShadow: '0 0 0 1px ' + color.hexCode } : {}">
@@ -32,39 +29,51 @@
               ></div>
           </div>
         </div>
+        
+      </div>
+
+      <div class="flex flex-col items-start px-4 mt-4">
+ 
 
         <div *ngIf="item.product.has_sizes" class="flex flex-wrap gap-2">
           <p (click)="item.selectedSizeIndex = sizeIndex"
             *ngFor="let size of item.colors[item.selectedColorIndex]?.sizes; let sizeIndex = index"
             class="w-8 h-8 rounded-md text-sm font-medium border text-gray-700 shadow text-center flex items-center justify-center cursor-pointer {{size.available<1?'opacity-20':''}}"
             [ngClass]="{
-              'bg-blue-500 text-white border-blue-600': sizeIndex === item.selectedSizeIndex,
+              'bg-black text-white border-black': sizeIndex === item.selectedSizeIndex,
               'bg-white border-gray-300': sizeIndex !== item.selectedSizeIndex
             }">
             {{ size.label.toUpperCase() }}
           </p>
         </div>
-        <p class="font-bold text-xl mt-4">
-          {{ item.colors[item.selectedColorIndex]?.sizes[item.selectedSizeIndex]?.sp | currency:'INR':'symbol':'1.2-2' }}
+
+            <p class="text-sm text-gray-500 line-clamp-3 pt-3">
+          {{ item.product.description }}
         </p>
       </div>
-    </div>
-
-    <!-- Button -->
-    <button (click)="addToCart(item.colors[item.selectedColorIndex]?.sizes[item.selectedSizeIndex])"
+     
+          <div class="px-5 pt-4">
+              <button (click)="addToCart(item.colors[item.selectedColorIndex]?.sizes[item.selectedSizeIndex])"
       *ngIf="item.colors[item.selectedColorIndex]?.sizes[item.selectedSizeIndex].available > 0 && !item.colors[item.selectedColorIndex]?.sizes[item.selectedSizeIndex].addedToCart"
-      class="w-full bg-green-500 text-white py-3 font-semibold hover:bg-green-600 transition">
+      class="w-full rounded-4xl bg-black text-white py-3 border-1 broder-black font-semibold transition">
       Add to Cart
     </button>
     <button (click)="removeFromCart(item.colors[item.selectedColorIndex]?.sizes[item.selectedSizeIndex])"
       *ngIf="item.colors[item.selectedColorIndex]?.sizes[item.selectedSizeIndex].available > 0 && item.colors[item.selectedColorIndex]?.sizes[item.selectedSizeIndex].addedToCart"
-      class="w-full bg-red-200 text-red-700 py-3 font-semibold  transition">
+      class="w-full rounded-4xl bg-red-200 text-red-700 py-3 font-semibold  transition">
       Remove
     </button>
     <button *ngIf="item.colors[item.selectedColorIndex]?.sizes[item.selectedSizeIndex].available < 1"
-      class="w-full bg-gray-300 text-gray-600 py-3 font-semibold cursor-not-allowed">
+      class="w-full rounded-4xl bg-gray-300 text-gray-600 py-3 font-semibold cursor-not-allowed">
       Out of Stock
     </button>
+          </div>
+    </div>
+
+ 
+
+
+    </div>
   </div>
   </div>
 </div>
