--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 @import "tailwindcss";
 
+:root {
+  --moto-green: #a1d71ab6;
+}
 
 button{
     cursor: pointer;
@@ -12,6 +15,15 @@ button{
   font-weight: normal;
   font-style: normal;
 }
+
+.primary-green{
+  color: var(--moto-green);
+}
+
+.green-bg{
+  background-color:var(--moto-green);
+}
+
 
 body {
     font-family: 'Poppins', sans-serif;
