--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,34 +1,6 @@
-<!-- <div class=" px-5 py-2 bg-amber-100 flex justify-between">
-  <img [routerLink]="['/']" src="mw-logo.png" alt="Logo" class="h-[50px] rounded-md cursor-pointer" />
-  <div class="flex gap-x-5 items-center">
-    <p [routerLink]="['/']" class="cursor-pointer font-medium">Home</p>
-    <p [routerLink]="['/dashboard/profile']" class="cursor-pointer font-medium">Profile</p>
-    <div [routerLink]="['cart']" style="position: relative;" class="cursor-pointer">
-      <svg version="1.1" viewBox="0 0 26 26" width="40" height="40" xml:space="preserve"
-        xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-        <path d="M22.6835938,7.1357422c-0.0253906-0.3955078-0.3525391-0.703125-0.7490234-0.703125h-3.9697266V5.2597656  
-      C17.9648438,2.9111328,15.7373047,1,13,1S8.0351563,2.9111328,8.0351563,5.2597656v1.1728516H4.0654297  
-      c-0.3964844,0-0.7236328,0.3076172-0.7490234,0.703125L2.2509766,24.203125  
-      c-0.0126953,0.2070313,0.0605469,0.4091797,0.2021484,0.5605469C2.5947266,24.9140625,2.7929688,25,3,25h20  
-      c0.2070313,0,0.4052734-0.0859375,0.546875-0.2363281c0.1416016-0.1513672,0.2148438-0.3535156,0.2021484-0.5605469  
-      L22.6835938,7.1357422z M9.5351563,5.2597656C9.5351563,3.7382813,11.0898438,2.5,13,2.5s3.4648438,1.2382813,3.4648438,2.7597656  
-      v1.1728516H9.5351563V5.2597656z M8.0351563,7.9326172v1.6289063c0,0.4140625,0.3359375,0.75,0.75,0.75s0.75-0.3359375,0.75-0.75  
-      V7.9326172h6.9296875v1.6289063c0,0.4140625,0.3359375,0.75,0.75,0.75s0.75-0.3359375,0.75-0.75V7.9326172h3.2646484  
-      l0.6498413,10.4003906H4.1206665L4.7705078,7.9326172H8.0351563z M3.7978516,23.5l0.260376-4.1669922h17.8835449L22.2021484,23.5  
-      H3.7978516z" fill="#1D1D1B" />
-      </svg>
 
-      <div *ngIf="cartItems.length > 0"
-        style="position: absolute; top: -5px; right: -5px; background: red; color: white; border-radius: 50%; width: 18px; height: 18px; font-size: 12px; display: flex; align-items: center; justify-content: center;">
-        {{ cartItems.length }}
-      </div>
-    </div>
-    <button (click)="isLoggedIn?logout():login()"
-      class="bg-black px-3 py-2 rounded-md text-white cursor-pointer">{{isLoggedIn?'Logout':'Login'}}</button>
-  </div>
-</div> -->
 
-<div class=" text-white text-center bg-black flex items-center justify-center menubar sticky top-0 z-50">
+<!-- <div class=" text-white text-center bg-black flex items-center justify-center menubar sticky top-0 z-50">
   <div>
     <div class="text-4xl w-full">
       <p class="menu-active py-2" style="font-family:quantify !important">Motowagon</p>
@@ -84,4 +56,19 @@
 </div>
 
   </div>
+</div> -->
+
+<div class=" text-white text-center  pt-4 flex items-center justify-center menubar" style="height:130px">
+        <div>
+            <div class="text-4xl w-full">
+                <p style="font-family:quantify !important">Motowagon</p>
+            </div>
+            <div class="flex items-center justify-center gap-x-5 md:gap-x-10 pt-4 w-full">
+                <p  routerLink="/" routerLinkActive="menu-active" [routerLinkActiveOptions]="{ exact: true }" class="cursor-pointer">Magazine</p>
+                <p routerLink="/cart"  routerLinkActive="menu-active" [routerLinkActiveOptions]="{ exact: true }" class="cursor-pointer">Cart</p>
+                <p routerLink="/dashboard/profile" routerLinkActive="menu-active" [routerLinkActiveOptions]="{ exact: true }" class="cursor-pointer">Dashboard</p>
+                <p routerLink="/contact" routerLinkActive="menu-active" [routerLinkActiveOptions]="{ exact: true }" class="cursor-pointer">Contact Us</p>
+        
+            </div>
+        </div>
 </div>
