--- a/src/app/web-layout/buy/buy.component.html
+++ b/src/app/web-layout/buy/buy.component.html
@@ -1,13 +1,19 @@
 <form [formGroup]="orderForm" *ngIf="myProfile && !paymentSuccess" (ngSubmit)="createOrder()"
-  class="flex flex-col lg:flex-row gap-6 p-4 max-w-[1400px] mx-auto pt-20">
+  class="flex flex-col lg:flex-row gap-6 p-4 max-w-[1400px] mx-auto pt-10 mt-10 mb-10 bg-white shadow-2xl shadow-gray-300 rounded-xl">
   <div class="w-full lg:w-5/12 space-y-4">
     <h2 class="text-xl font-bold mb-4">DELIVERY DETAILS</h2>
 
     <div class="mb-4">
-      <label for="name" class="block text-sm font-medium text-gray-700 mb-1 ">Recipient Name</label>
-      <input formControlName="shippingName" autocomplete="off" type="text" id="name" name="name"
+      <label for="name" class="block text-sm font-medium text-gray-700 mb-1 ">Recipient First Name</label>
+      <input formControlName="shippingFirstName" autocomplete="off" type="text" id="name" name="name"
         class="w-full border border-gray-300 rounded px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500 placeholder-gray-500"
-        placeholder="Enter recipient name" />
+        placeholder="Enter first name" />
+    </div>
+      <div class="mb-4">
+      <label for="name" class="block text-sm font-medium text-gray-700 mb-1 ">Recipient Last Name</label>
+      <input formControlName="shippingLastName" autocomplete="off" type="text" id="name" name="name"
+        class="w-full border border-gray-300 rounded px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500 placeholder-gray-500"
+        placeholder="Enter last name" />
     </div>
     <div class="mb-4">
       <label for="name" class="block text-sm font-medium text-gray-700 mb-1 ">Recipient Email</label>
@@ -203,7 +209,7 @@
       </div>
     </div>
    <ng-template #noItems>
-  <div class="w-full lg:w-7/12 p-4  ps-10 border-gray-300">
+  <div class="w-full text-gray-600 font-semibold  p-4 text-3xl  ps-10 ">
     <ng-container *ngIf="formItems.length === 0">
       <p>Your cart is empty.</p>
     </ng-container>
