--- a/src/app/web-layout/dashboard-layout/dashboard-layout.component.html
+++ b/src/app/web-layout/dashboard-layout/dashboard-layout.component.html
@@ -1,5 +1,5 @@
-<div class="bg-[#fdfdfd] min-h-screen">
-    <div class="flex max-w-[1200px] mx-auto pt-10">
+<div class="bg-[#fdfdfd] rounded-xl mt-5">
+    <div class="flex max-w-[1200px] mx-auto">
   <!-- Sidebar -->
   <aside class="w-64 bg-white rounded-md overflow-hidden shadow-[5px_0_15px_-5px_rgba(0,0,0,0.3)] min-h-[500px]">
   <ul>
