--- a/src/app/web-layout/buy/buy.component.html
+++ b/src/app/web-layout/buy/buy.component.html
@@ -209,7 +209,7 @@
       </div>
     </div>
    <ng-template #noItems>
-  <div class="w-full text-gray-600 font-semibold  p-4 text-3xl  ps-10 ">
+  <div class="w-full text-gray-600 font-semibold  p-2 text-3xl  md:ps-10 ">
     <ng-container *ngIf="formItems.length === 0">
       <p>Your cart is empty.</p>
     </ng-container>
