--- a/src/app/web-layout/web-layout.component.html
+++ b/src/app/web-layout/web-layout.component.html
@@ -2,7 +2,7 @@
 <router-outlet></router-outlet> -->
 
 
-<div class="w-screen gradient relative">
+<div class="w-screen gradient relative min-h-screen">
         <app-menu  style="position: sticky;top:0;z-index:10" ></app-menu>
         <div class="max-w-[1200px] mx-auto">
             <div >
