--- a/src/app/web-layout/home/home.component.css
+++ b/src/app/web-layout/home/home.component.css
@@ -1,6 +1,5 @@
 .box {
 
-    background: linear-gradient(to bottom, #ff7e5f 30%, #feb47b 100%);
     border-radius: 20px;
     position: relative;
     overflow: hidden; /* Clips inner content */
@@ -12,7 +11,7 @@
 
 .mag-image:hover{
     transform: scale(105%);
-    cursor:grab;
+    /* cursor:grab; */
 }
 
 .buy-btn{
@@ -22,4 +21,41 @@
 .buy-btn:hover{
     background-color: #A3D71A;
     color:black;
+}
+
+
+.carousel-container {
+  position: relative;
+  width: 100%;
+  overflow: hidden;
+}
+
+.carousel-images {
+  display: flex;
+  transition: transform 0.5s ease-in-out;
+  width: 100%;
+}
+
+.carousel-image {
+  width: 100%;
+  flex-shrink: 0;
+  object-fit: cover;
+  border-radius: 8px;
+}
+
+
+
+.dots span {
+  height: 8px;
+  width: 8px;
+  margin: 0 5px;
+  display: inline-block;
+  background-color: #ccc;
+  border-radius: 50%;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.dots span.active {
+  background-color: #333;
 }
