--- a/src/app/web-layout/web-layout.component.css
+++ b/src/app/web-layout/web-layout.component.css
@@ -1,3 +1,3 @@
 .gradient{
-    background: linear-gradient(to bottom, black , white 75%, white);
+    background: linear-gradient(to bottom, black , #f1f4dfa9 75%, #f1f4dfa9);
 }
